--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,12 +17,49 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          
+          <% if @book.favorited_by?(current_user) %>
+            <td>
+              <%= link_to book_favorites_path(@book), method: :delete do %>
+                 ♥<%= @book.favorites.count %>
+              <% end %>
+            </td>
+            <% else %>
+            <td>
+              <%= link_to book_favorites_path(@book), method: :post do %>
+                ♡<%= @book.favorites.count %>
+              <% end %>
+            </td>
+          <% end %>
+          
+          <td>コメント数：<%= @book.book_comments.count %></td>
+          
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
-        </tr>
-      </table>
+        </table>
+        
+        <div>
+          <% @book.book_comments.each do |book_comment| %>
+            <%= link_to(book_comment.user) do %>
+              <p><%= image_tag book_comment.user.get_profile_image, size:"100x100" %></p>
+              <%= book_comment.user.name %>
+            <% end %>
+            <p><%= book_comment.comment %></p>
+            <% if book_comment.user == current_user %>
+              <%= link_to 'destroy', book_book_comment_path(book_comment.book, book_comment), method: :delete%>
+            <% end %>
+          <% end %>
+        </div>
+      
+      <div>
+        <%= form_with model: [@book, @book_comment] do |f| %>
+          <%= f.text_area :comment, size: '100%' %>
+          <%= f.submit "送信する" %>
+        <% end %>
+      </div>
+      
     </div>
   </div>
 </div>
