--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -40,21 +40,29 @@
           <% end %>
         </table>
         
-        <div>
-          <% @book.book_comments.each do |book_comment| %>
-            <%= link_to(book_comment.user) do %>
-              <p><%= image_tag book_comment.user.get_profile_image, size:"100x100" %></p>
-              <%= book_comment.user.name %>
+        <table>
+          <tbody>
+            <% @book.book_comments.each do |book_comment| %>
+            <tr>
+              <td>
+                <%= link_to(book_comment.user) do %>
+                  <%= image_tag book_comment.user.get_profile_image, size:"100x100" %>
+                  <%= book_comment.user.name %>
+                <% end %>
+              </td>
+              <td><%= book_comment.comment %></td>
+              <td>
+                <% if book_comment.user == current_user %>
+                  <%= link_to 'Destroy', book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
+                <% end %>
+              </td>
+            </tr>  
             <% end %>
-            <p><%= book_comment.comment %></p>
-            <% if book_comment.user == current_user %>
-              <%= link_to 'destroy', book_book_comment_path(book_comment.book, book_comment), method: :delete%>
-            <% end %>
-          <% end %>
-        </div>
+          </tbody>
+        </table>
       
       <div>
-        <%= form_with model: [@book, @book_comment] do |f| %>
+        <%= form_with(model: [@book, @book_comment], local: true) do |f| %>
           <%= f.text_area :comment, size: '100%' %>
           <%= f.submit "送信する" %>
         <% end %>
