--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -7,11 +7,35 @@
   <tr>
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
+	</tr>
+	<tr>
+	   <th>
+	     follows:  
+	     <%= link_to user_followings_path(user) do %>
+	        <%= user.followings.count %>
+	     <% end %>
+	   </th>
+	</tr>
+	<tr>
+	  <th>
+	    followers:  
+	    <%= link_to user_followers_path(user) do %>
+	       <%= user.followers.count %>
+	    <% end %>
+	  </th>
   </tr>
 </table>
 　
 <div class='row'>
-  <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
-    <i class="fas fa-user-cog"></i>
+  <% if user == current_user %>
+    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
+      <i class="fas fa-user-cog"></i>
+    <% end %>
+  <% else %>
+    <% if current_user.following?(user) %>
+      <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-sm btn-danger" %>
+    <% else %>
+      <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: 'btn btn-sm btn-primary' %>
+    <% end %>
   <% end %>
 </div>
