--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,22 +16,13 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-        
-        <% if book.favorited_by?(current_user) %>
-          <td>
-            <%= link_to book_favorites_path(book), method: :delete do %>
-               ♥<%= book.favorites.count %>
-            <% end %>
-          </td>
-            <% else %>
-          <td>
-            <%= link_to book_favorites_path(book), method: :post do %>
-              ♡<%= book.favorites.count %>
-            <% end %>
-          </td>
-        <% end %>
+
+        <td id="favorite_btn_<%= book.id %>">
+          <%= render "favorites/favorite-btn", book: book %>
+        </td>
+
         <td>コメント数：<%= book.book_comments.count %></td>
-        
+
       </tr>
     <% end %>
   </tbody>
