--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -21,7 +21,7 @@
           <%= render "favorites/favorite-btn", book: book %>
         </td>
 
-        <td>コメント数：<%= book.book_comments.count %></td>
+        <td><%= render "book_comments/counter", book: book %></td>
 
       </tr>
     <% end %>
