--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,7 +1,7 @@
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>errors prohibited this obj from being saved:
+<% if book.errors.any? %>
+  <%= book.errors.count %>errors prohibited this obj from being saved:
   <ul>
-    <% @book.errors.full_messages.each do |message| %>
+    <% book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
   </ul>
@@ -16,6 +16,22 @@
     <%= f.label :opinion %>
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
+  
+  <div class="form-group row" id="star">
+    <%= f.label :star,'評価', class:'col-md-3 col-form-label' %>
+    <%= f.hidden_field :star, id: :review_star %>
+　</div>
+  <script>
+　　$('#star').empty();
+    $('#star').raty({
+      size     : 36,
+      starOff:  '<%= asset_path('star-off.png') %>',
+      starOn : '<%= asset_path('star-on.png') %>',
+      scoreName: 'book[star]',
+      half: false,
+    });
+  </script>
+  
   <div class="form-group">
     <%= f.submit class: 'btn btn-success' %>
   </div>
