--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,40 +22,23 @@
             <%= render "favorites/favorite-btn", book: @book %>
           </td>
           
-          <td>コメント数：<%= @book.book_comments.count %></td>
+          <td class="book-comments-counter">
+            <%= render "book_comments/counter", book: @book %>
+          </td>
           
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
-        </table>
+        </tr>
+      </table>
         
-        <table>
-          <tbody>
-            <% @book.book_comments.each do |book_comment| %>
-            <tr>
-              <td>
-                <%= link_to(book_comment.user) do %>
-                  <%= image_tag book_comment.user.get_profile_image, size:"100x100" %>
-                  <%= book_comment.user.name %>
-                <% end %>
-              </td>
-              <td><%= book_comment.comment %></td>
-              <td>
-                <% if book_comment.user == current_user %>
-                  <%= link_to 'Destroy', book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
-                <% end %>
-              </td>
-            </tr>  
-            <% end %>
-          </tbody>
-        </table>
+      <div class="book-comments-index">
+        <%= render "book_comments/index", book: @book %>
+      </div>
       
       <div>
-        <%= form_with(model: [@book, @book_comment], local: true) do |f| %>
-          <%= f.text_area :comment, size: '100%' %>
-          <%= f.submit "送信する" %>
-        <% end %>
+        <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
       </div>
       
     </div>
