--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,13 +16,11 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-
         <td id="favorite_btn_<%= book.id %>">
           <%= render "favorites/favorite-btn", book: book %>
         </td>
-
         <td><%= render "book_comments/counter", book: book %></td>
-
+        <td><%= render "books/static_rate", book: book %></td>
       </tr>
     <% end %>
   </tbody>
