--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,6 +8,10 @@
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
+      <p>
+        <%= link_to '新しい順', books_path(latest: "true") %>
+        |<%= link_to '評価の高い順', books_path(rate_count: "true") %>
+      </p>
       <%= render 'index', books: @books %>
     </div>
   </div>
