--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -26,6 +26,8 @@
             <%= render "book_comments/counter", book: @book %>
           </td>
           
+          <td><%= render "static_rate", book: @book %></td>
+          
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
