--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -9,29 +9,32 @@
 
 <%= form_with model:book,local:true do |f| %>
   <div class="form-group">
-    <%= f.label :title %>
+    <%= f.label :Title %>
     <%= f.text_field :title, class: 'form-control book_title' %>
   </div>
   <div class="form-group">
-    <%= f.label :opinion %>
+    <%= f.label :Opinion %>
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
+  <div class="form-group">
+    <%= f.label :Tag %>
+    <%= f.text_field :category, class: 'form-control book_category' %>
+  </div>
   
-  
-    <div id="post_raty"></div>
-    <script>
-      $(document).on('turbolinks:load', function() {
-      let raty_elem = document.querySelector('#post_raty');
-      raty_elem.innerHTML = ""
-      let option = {  
-          starOn: "<%= asset_path('star-on.png') %>",
-          starOff: "<%= asset_path('star-off.png') %>",
-          starHalf: "<%= asset_path('star-half.png') %>",
-          scoreName: 'book[rate]',
-        };
-      raty(raty_elem,option);
-     });
-    </script>
+  <div id="post_raty"></div>
+  <script>
+    $(document).on('turbolinks:load', function() {
+    let raty_elem = document.querySelector('#post_raty');
+    raty_elem.innerHTML = ""
+    let option = {  
+        starOn: "<%= asset_path('star-on.png') %>",
+        starOff: "<%= asset_path('star-off.png') %>",
+        starHalf: "<%= asset_path('star-half.png') %>",
+        scoreName: 'book[rate]',
+      };
+    raty(raty_elem,option);
+   });
+  </script>
   
   
   <div class="form-group">
