--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <div class='row'>
         <div class='col-md-12'>
           <% if user_signed_in? %>
+          
             <div class="search_form">
               <%= form_with url: search_path, local: true, method: :get do |f| %>
                 <%= f.text_field :word %>
@@ -23,6 +24,14 @@
                 <%= f.submit "検索", class: "btn btn-primary" %>
               <% end %>
             </div>
+          
+            <div class="search_form">
+              <%= form_with url: search_book_path, local: true, method: :get do |f| %>
+                <%= f.text_field :category %>
+                <%= f.submit "タグ検索", class: "btn btn-primary" %>
+              <% end %>
+            </div>
+            
           <% end %>
         </div>
       </div>
