--- a/app/views/books/search_book.html.erb
+++ b/app/views/books/search_book.html.erb
@@ -1,4 +1,7 @@
-<table class='table table-hover table-inverse'>
+<h2>Books search for "<%=@keyword%>"</h2>
+
+<table class="table table-hover table-inverse">
+  
   <thead>
     <tr>
       <th></th>
@@ -8,8 +11,9 @@
       <th colspan="3"></th>
     </tr>
   </thead>
+
   <tbody>
-    <% books.each do |book| %>
+    <% @books.each do |book| %>
       <tr>
         <td><%= link_to (book.user) do %>
           <%= image_tag book.user.get_profile_image, size:'50x50' %>
@@ -17,17 +21,11 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-        
         <td>
           <%= link_to book.category, search_book_path(keyword: book.category) %>
         </td>
-        
-        <td id="favorite_btn_<%= book.id %>">
-          <%= render "favorites/favorite-btn", book: book %>
-        </td>
-        <td><%= render "book_comments/counter", book: book %></td>
-        <td><%= render "books/static_rate", book: book %></td>
       </tr>
     <% end %>
   </tbody>
+  
 </table>
