--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,6 +18,10 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
           
+          <td>
+          <%= link_to @book.category, search_book_path(keyword: @book.category) %>
+          </td>
+          
           <td id="favorite_btn_<%= @book.id %>">
             <%= render "favorites/favorite-btn", book: @book %>
           </td>
