--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,9 @@
           
             <div class="search_form">
               <%= form_with url: search_book_path, local: true, method: :get do |f| %>
-                <%= f.text_field :category %>
+                <%= f.text_field :keyword %>
+                <%= f.hidden_field :model, :value => "book"  %>
+                <%= f.hidden_field :method, :value => "perfect" %>
                 <%= f.submit "タグ検索", class: "btn btn-primary" %>
               <% end %>
             </div>
